--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,7 +56,7 @@ dependencies {
     implementation 'androidx.viewpager:viewpager:1.0.0'
     testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    implementation 'com.github.lecho:hellocharts-library:1.5.8@aar'
+   
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
         // Import the BoM for the Firebase platform
@@ -71,7 +71,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:19.0.0'
     implementation 'pub.devrel:easypermissions:0.3.0'
 
-
+    implementation 'com.google.android.material:material:1.3.0-alpha02'
 
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.google.firebase:firebase-messaging:21.0.1'
