survey description new buttons

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,9 +54,10 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment:2.3.2'
     implementation 'androidx.navigation:navigation-ui:2.3.2'
     implementation 'androidx.viewpager:viewpager:1.0.0'
+    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
     testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-   
+    implementation 'com.r0adkll:slidableactivity:2.1.0'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
         // Import the BoM for the Firebase platform
